@@ -4,13 +4,12 @@ import java.util.Collections;
 import java.util.List;
 
 import com.bakdata.conquery.models.datasets.concepts.select.connector.FirstValueSelect;
-import com.bakdata.conquery.sql.conversion.cqelement.concept.CteStep;
+import com.bakdata.conquery.sql.conversion.cqelement.concept.ConceptCteStep;
 import com.bakdata.conquery.sql.conversion.model.ColumnDateRange;
-import com.bakdata.conquery.sql.conversion.model.select.SqlSelects;
 import com.bakdata.conquery.sql.conversion.model.select.ExtractingSqlSelect;
 import com.bakdata.conquery.sql.conversion.model.select.FirstValueSqlSelect;
+import com.bakdata.conquery.sql.conversion.model.select.SqlSelects;
 import org.jooq.Field;
-import org.jooq.impl.DSL;
 
 public class FirstValueSelectConverter implements SelectConverter<FirstValueSelect> {
 
@@ -18,37 +17,36 @@ public class FirstValueSelectConverter implements SelectConverter<FirstValueSele
 	public SqlSelects convert(FirstValueSelect firstSelect, SelectContext context) {
 
 		ExtractingSqlSelect<Object> rootSelect = new ExtractingSqlSelect<>(
-				context.getConceptTables().getPredecessorTableName(CteStep.PREPROCESSING),
+				context.getConceptTables().getPredecessor(ConceptCteStep.PREPROCESSING),
 				firstSelect.getColumn().getName(),
 				Object.class
 		);
 
-
 		List<Field<?>> validityDateFields = context.getValidityDate()
 												   .map(validityDate -> validityDate.qualify(context.getConceptTables()
-																									.getPredecessorTableName(CteStep.AGGREGATION_SELECT)))
+																									.getPredecessor(ConceptCteStep.AGGREGATION_SELECT)))
 												   .map(ColumnDateRange::toFields)
-												   .orElse(List.of(DSL.field(DSL.val(1))));
+												   .orElse(Collections.emptyList());
 
 		FirstValueSqlSelect firstValueSqlSelect =
 				FirstValueSqlSelect.builder()
-								   .firstColumn(context.getConceptTables().qualifyOnPredecessorTableName(CteStep.AGGREGATION_SELECT, rootSelect.aliased()))
-								   .alias(firstSelect.getName())
+								   .firstColumn(context.getConceptTables().qualifyOnPredecessor(ConceptCteStep.AGGREGATION_SELECT, rootSelect.aliased()))
+								   .alias(context.getNameGenerator().selectName(firstSelect))
 								   .orderByColumns(validityDateFields)
-								   .functionProvider(context.getParentContext().getSqlDialect().getFunction())
+								   .functionProvider(context.getParentContext().getSqlDialect().getFunctionProvider())
 								   .build();
 
 
 		ExtractingSqlSelect<Object> finalSelect = new ExtractingSqlSelect<>(
-				context.getConceptTables().getPredecessorTableName(CteStep.FINAL),
+				context.getConceptTables().getPredecessor(ConceptCteStep.FINAL),
 				firstValueSqlSelect.aliased().getName(),
 				Object.class
 		);
 
 		return SqlSelects.builder()
-						 .forPreprocessingStep(Collections.singletonList(rootSelect))
-						 .forAggregationSelectStep(Collections.singletonList(firstValueSqlSelect))
-						 .forFinalStep(Collections.singletonList(finalSelect))
+						 .forPreprocessingStep(List.of(rootSelect))
+						 .forAggregationSelectStep(List.of(firstValueSqlSelect))
+						 .forFinalStep(List.of(finalSelect))
 						 .build();
 	}
 
